--- a/crawlers/deploy/ethereum-missing.service
+++ b/crawlers/deploy/ethereum-missing.service
@@ -9,3 +9,4 @@ Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler blocks missing --blockchain ethereum -n
+SyslogIdentifier=ethereum-missing
