--- a/.github/workflows/lint.backend.yml
+++ b/.github/workflows/lint.backend.yml
@@ -24,7 +24,12 @@ jobs:
         run: pip install -e .[dev]
       - name: Mypy type check
         working-directory: ./backend
-        run: mypy moonstreamapi/
+        run: |
+            mypy --version
+            mypy backend/
+
       - name: Black syntax check
         working-directory: ./backend
-        run: black --check moonstreamapi/
+        run: | 
+            black --version
+            black --check backend/
