--- a/.github/workflows/lint.db.yml
+++ b/.github/workflows/lint.db.yml
@@ -24,7 +24,11 @@ jobs:
         run: pip install -e .[dev]
       - name: Mypy type check
         working-directory: ./db
-        run: mypy moonstreamdb/
+        run: |
+            mypy --version
+            mypy db/
       - name: Black syntax check
         working-directory: ./db
-        run: black --check moonstreamdb/
+        run: | 
+            black --version
+            black --check db/
