--- a/nodes/deploy/node-balancer.service
+++ b/nodes/deploy/node-balancer.service
@@ -11,7 +11,7 @@ WorkingDirectory=/home/ubuntu/moonstream/nodes/node_balancer
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 Restart=on-failure
 RestartSec=15s
-ExecStart=/home/ubuntu/moonstream/nodes/node_balancer/nodebalancer \
+ExecStart=/home/ubuntu/moonstream/nodes/node_balancer/nodebalancer server \
     -host "${AWS_LOCAL_IPV4}" \
     -port 8544 \
     -healthcheck \
