--- a/db/sync_conf.yml
+++ b/db/sync_conf.yml
@@ -22,3 +22,10 @@
   tablename: polygon_labels
 - namespace: public
   tablename: polygon_transactions
+- namespace: public
+  tablename: xdai_blocks
+- namespace: public
+  tablename: xdai_transactions
+- namespace: public
+  tablename: xdai_labels
+
