--- a/nodes/deploy/node-balancer.service
+++ b/nodes/deploy/node-balancer.service
@@ -15,7 +15,7 @@ ExecStart=/home/ubuntu/moonstream/nodes/node_balancer/nodebalancer server \
     -host "${AWS_LOCAL_IPV4}" \
     -port 8544 \
     -healthcheck \
-    -config /home/ubuntu/.nodebalancer/config.txt
+    -config /home/ubuntu/.nodebalancer/config.json
 SyslogIdentifier=node-balancer
 
 [Install]
