--- a/frontend/sample.env
+++ b/frontend/sample.env
@@ -5,3 +5,4 @@ export NEXT_PUBLIC_MOONSTREAM_API_URL=https://api.moonstream.to
 export NEXT_PUBLIC_SIMIOTICS_AUTH_URL=https://auth.bugout.dev
 export NEXT_PUBLIC_SIMIOTICS_JOURNALS_URL=https://spire.bugout.dev
 export NEXT_PUBLIC_FRONTEND_VERSION="<frontend_version_number>"
+export NEXT_PUBLIC_GTAG="<G-....>"
