--- a/backend/deploy/moonstream.service
+++ b/backend/deploy/moonstream.service
@@ -1,14 +1,16 @@
 [Unit]
 Description=moonstreamapi-service
 After=network.target
+StartLimitIntervalSec=300
+StartLimitBurst=3
 
 [Service]
-User=ubuntu
-Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/backend
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
+Restart=on-failure
+RestartSec=15s
 ExecStart=/home/ubuntu/moonstream-env/bin/uvicorn --proxy-headers --forwarded-allow-ips='127.0.0.1' --host 127.0.0.1 --port 7481 --workers 8 moonstreamapi.api:app
-SyslogIdentifier=moonstreamapi
+SyslogIdentifier=moonstream
 
 [Install]
 WantedBy=multi-user.target
