--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -31,3 +31,8 @@ export MOONSTREAM_S3_QUERIES_BUCKET_PREFIX="dev"
 # 3rd parties environment variables
 export MOONSTREAM_ETHERSCAN_TOKEN="<Token_for_etherscan>"
 export COINMARKETCAP_API_KEY="<API_key_to_parse_conmarketcap>"
+
+
+# Custom crawler
+export CUSTOM_CRAWLER_S3_BUCKET="<public_bucket>"
+export CUSTOM_CRAWLER_S3_BUCKET_PREFIX="<prefix>"
