--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -37,3 +37,4 @@ export COINMARKETCAP_API_KEY="<API_key_to_parse_conmarketcap>"
 export MOONSTREAM_S3_PUBLIC_DATA_BUCKET="<public_bucket>"
 export MOONSTREAM_S3_PUBLIC_DATA_BUCKET_PREFIX="dev"
 export MOONSTREAM_PUBLIC_QUERIES_DATA_ACCESS_TOKEN="<access token for run queries for public dashboards>"
+export INFURA_PROJECT_ID="<infura_project_id>"
