--- a/crawlers/deploy/ethereum-txpool.service
+++ b/crawlers/deploy/ethereum-txpool.service
@@ -5,15 +5,11 @@ StartLimitIntervalSec=300
 StartLimitBurst=3
 
 [Service]
-User=ubuntu
-Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/txpool
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 Restart=on-failure
 RestartSec=15s
-ExecStart=/home/ubuntu/moonstream/crawlers/txpool/txpool \
-    -blockchain ethereum \
-    -access-id "${NB_CONTROLLER_ACCESS_ID}"
+ExecStart=/home/ubuntu/moonstream/crawlers/txpool/txpool -blockchain ethereum -access-id "${NB_CONTROLLER_ACCESS_ID}"
 CPUWeight=30
 SyslogIdentifier=ethereum-txpool
 
