--- a/crawlers/deploy/polygon-statistics.service
+++ b/crawlers/deploy/polygon-statistics.service
@@ -4,12 +4,8 @@ After=network.target
 
 [Service]
 Type=oneshot
-User=ubuntu
-Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.stats_worker.dashboard \
-    --access-id "${NB_CONTROLLER_ACCESS_ID}" \
-    generate --blockchain polygon
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.stats_worker.dashboard --access-id "${NB_CONTROLLER_ACCESS_ID}" generate --blockchain polygon
 CPUWeight=60
 SyslogIdentifier=polygon-statistics
