--- a/crawlers/deploy/xdai-missing.service
+++ b/crawlers/deploy/xdai-missing.service
@@ -4,12 +4,8 @@ After=network.target
 
 [Service]
 Type=oneshot
-User=ubuntu
-Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler \
-    --access-id "${NB_CONTROLLER_ACCESS_ID}" \
-    blocks missing --blockchain xdai -n
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler --access-id "${NB_CONTROLLER_ACCESS_ID}" blocks missing --blockchain xdai -n
 CPUWeight=50
 SyslogIdentifier=xdai-missing
